--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Pro - Scroll-driven Crossfades</title>
   <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
   <header>
