--- a/pages/experience/experience.html
+++ b/pages/experience/experience.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Blog Posts</title>
     <link rel="stylesheet" href="experience.css">
+    <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
     <header>
