--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Portfolio Website</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
   <div class="page-container">
