--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Platform Demo - CSS Clip Path Demo</title>
   <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
   <div class="slides">
