--- a/pages/cover/cover.html
+++ b/pages/cover/cover.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Pro - Those Little Details</title>
   <link rel="stylesheet" href="cover.css">
+  <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
   <header>
