--- a/pages/intro/intro.html
+++ b/pages/intro/intro.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Product Card</title>
   <link rel="stylesheet" href="intro.css">
+  <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
   <div class="card-container">
