--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Craft of UI</title>
   <link rel="stylesheet" href="projects.css">
+  <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
   <h1 class="fluid">the craft of ui</h1>
