--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <h1><span>All-New</span>CSS Pro</h1>
-    <h2 class="typewriter">Scroll-driven crossfades</h2>
+    <h1><span>About</span>Me</h1>
+    <h2 class="typewriter"> </h2>
   </header>
   <main>
     <section>
@@ -21,8 +21,8 @@
             <div><div></div></div>
           </div>
           <div class="caption">
-            <h2>Tiny amounts of CSS</h2>
-            <p class="typewriter">Scroll-driven animations give you the ability to drive your CSS animations on scroll.</p>
+            <h2>Why I do this</h2>
+            <p class="typewriter">I love problem solving and everything about digitalization.</p>
           </div>
           <img src="https://fastly.picsum.photos/id/331/1080/1080.jpg?hmac=sKtPuOzOG1d8p_sVxG4BEL0XGOMPDCvjpN43H9zqW9M" alt="" width="1080" />
           <img src="https://fastly.picsum.photos/id/536/1080/1080.jpg?hmac=TfR6GPF3n9B6s9bK4hbWAh_1qU8AGdKEOMiQd_nZIhs" alt="" width="1080" />
@@ -43,8 +43,8 @@
             <div><div></div></div>
           </div>
           <div class="caption">
-            <h2>Cross fading</h2>
-            <p class="typewriter">The trick is one animation to take opacity from 1 to 0. One image uses reverse animation-direction.</p>
+            <h2>My Interests</h2>
+            <p class="typewriter">I love designing and mostly front end stuffs but im trying to get into backend</p>
           </div>
           <img src="https://fastly.picsum.photos/id/378/1080/1080.jpg?hmac=U_xpCJPibwUl5MELHA1W48oscgI19Tsu_zCsFSBen5g" alt="" width="1080" />
           <img src="https://fastly.picsum.photos/id/781/1080/1080.jpg?hmac=jkgggUr9sBP4qCFAKygIg2lgkcwlZXzll0rwptlFHH4" alt="" width="1080" />
@@ -59,8 +59,8 @@
             <div><div></div></div>
           </div>
           <div class="caption">
-            <h2>mix-blend-mode</h2>
-            <p class="typewriter">For a better looking fade, use mix-blend-mode: plus-lighter on the images.</p>
+            <h2>My languages</h2>
+            <p class="typewriter">React, HTML, CSS, JS, R, Python.</p>
           </div>
           <img src="https://fastly.picsum.photos/id/117/1080/1080.jpg?hmac=-9Jpnmxo4_zX7bESbfC1x4y5bAxow3Cvhejo-gZsCIE" alt="" width="1080" />
           <img src="https://fastly.picsum.photos/id/659/1080/1080.jpg?hmac=_To6fpzA0QnMsx3PTeTwtVxjjbnnNN2rliHf9q0UDNU" alt="" width="1080" />
@@ -72,29 +72,25 @@
     </section>
     <section>
       <div class="image-box">
-        <div class="controller">
+        <!-- <div class="controller">
           <img src="https://fastly.picsum.photos/id/362/1080/1080.jpg?hmac=vzwn2CXU8s21DH7LVZRAozOwmkP5S2iWl2ssJvCv2QA" alt="" width="1080" />
-        </div>
+        </div> -->
         <div class="swapper">
           <div class="progress">
             <div><div></div></div>
             <div><div></div></div>
           </div>
-          <div class="caption">
-            <h2>Driver</h2>
-            <p class="typewriter">Drive the animation based on the container position. Use calc for other effects.</p>
-          </div>
+          <!-- <div class="caption">
+            <h2>Other interests</h2>
+            <p class="typewriter">I love anything board sports mostly surfing and snowboarding.</p>
+          </div> -->
           <img src="https://fastly.picsum.photos/id/983/1080/1080.jpg?hmac=_pzYklUuqWk6z0X9h9p9xNKJr2sThQoadn5YRCVHa88" alt="" width="1080" />
           <img src="https://fastly.picsum.photos/id/825/1080/1080.jpg?hmac=XUiCHv4mdtexe6QpAmD4Y_d81clCeLoZKYO6xGtRU6M" alt="" width="1080" />
         </div>
       </div>
     </section>
-    <section>
-      <h2>fin.</h2>
-      <h2 class="typewriter">Bookmark and follow for more.<br>Polyfilled with GSAP.</h2>
-    </section>
   </main>
-  <footer class="typewriter">jh3yy &copy; 2024 ʕ •ᴥ•ʔ</footer>
+  <!-- <footer class="typewriter">jh3yy &copy; 2024 ʕ •ᴥ•ʔ</footer> -->
   
   <script src="about.js"></script>
   <script>
