--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -16,15 +16,15 @@
         </div>
       </nav>
       <header aria-hidden="true">
-        <h1>Platform</h1>
+        <h1>Contacts</h1>
       </header>
       <main>
         <div>
           <header>
-            <h1>Platform</h1>
+            <h1>Contacts</h1>
           </header>
           <section>
-            <img src="https://assets.codepen.io/605876/stage-fuel.jpeg" alt="Jhey walks across a stage at All Day Hey! 2022" />
+            <img src="./contacts.jpg" alt="Jhey walks across a stage at All Day Hey! 2022" />
           </section>
         </div>
         <section>
@@ -58,9 +58,9 @@
             </a>
           </div>
         </section>
-        <footer>
+        <!-- <footer>
           <div class="content">@jh3yy &copy; 2024 ┬┴┬┴┤•ᴥ•ʔ├┬┴┬┴</div>
-        </footer>
+        </footer> -->
       </main>
     </div>
     <div class="captioner">
