--- a/pages/experience/experience.html
+++ b/pages/experience/experience.html
@@ -10,56 +10,56 @@
 <body>
     <header>
         <section>
-            <h1>Posts<span>by</span><span>Your Name.</span></h1>
+            <h1>Work<span>& Experiences</span><span></span></h1>
         </section>
     </header>
     <main>
         <section>
             <ol>
                 <li>
-                    <a href="#">CSS in 2024, right?<span>Jan 2024</span></a>
+                    <a href="#">HeadStarter SWE<span>Jul 2024 - Sep 2024</span></a>
                     <img src="https://picsum.photos/200/200?random=1" alt="" />
                 </li>
                 <li>
-                    <a href="#">Taming scroll animations<span>Dec 2023</span></a>
+                    <a href="#">Underwater Ceramic Technician<span>Sep 2024 - Dec 2024</span></a>
                     <img src="https://picsum.photos/200/200?random=2" alt="" />
                 </li>
                 <li>
-                    <a href="#">You :has the power<span>Dec 2023</span></a>
+                    <a href="#">Ogogopogo Solar Club Software team<span>Sep 2024 - Apr 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=3" alt="" />
                 </li>
                 <li>
-                    <a href="#">Infinite marquee without repeated elements<span>Nov 2023</span></a>
+                    <a href="#">VR Study research assistant<span>Nov 2024 - Apr 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=4" alt="" />
                 </li>
                 <li>
-                    <a href="#">Magic easing with linear()<span>Oct 2023</span></a>
+                    <a href="#">Permika Okanagan Marketing and Event Director<span>Sep 2024 - May 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=5" alt="" />
                 </li>
                 <li>
-                    <a href="#">Taming the CSS glow<span>Oct 2023</span></a>
+                    <a href="#">BIMatUBC Okanagan President<span>Nov 2024 - Feb 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=6" alt="" />
                 </li>
                 <li>
-                    <a href="#">Custom cursors? CSS can do that<span>Sep 2023</span></a>
+                    <a href="#">TBA<span>Jun 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=7" alt="" />
                 </li>
                 <li>
-                    <a href="#">Making a Jetpack for bears<span>Aug 2023</span></a>
+                    <a href="#">To be Announced<span>Jun 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=8" alt="" />
                 </li>
                 <li>
-                    <a href="#">Balance sliders with one cool hack<span>Aug 2023</span></a>
+                    <a href="#">To be announced<span>Jun 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=9" alt="" />
                 </li>
                 <li>
-                    <a href="#">What if scrollbars respected radius?<span>Feb 2023</span></a>
+                    <a href="#">To be Announced<span>Jun 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=10" alt="" />
                 </li>
             </ol>
         </section>
     </main>
-    <footer>made by jhey &copy; 2024 ʕ •ᴥ•ʔ</footer>
+    <!-- <footer>made by jhey &copy; 2024 ʕ •ᴥ•ʔ</footer> -->
 
     <script src="experience.js"></script>
   <script>
