--- a/pages/intro/intro.html
+++ b/pages/intro/intro.html
@@ -21,17 +21,17 @@
 <body>
   <div class="card-container">
     <div class="page-title">
-      <h2 class="typewriter">Interactive Product Card</h2>
+      <h2>My Profile.</h2>
     </div>
     
     <article>
       <div class="media">
-        <video src="https://assets.codepen.io/605876/jhey-product.mp4" muted loop preload="none" playsinline></video>
-        <img src="https://assets.codepen.io/605876/jhey-product.jpg" alt="Pic of Jhey" />
+        <video src="./intros.mp4" muted loop preload="none" playsinline></video>
+        <img src="./intros.jpg" alt="Pic of Me" />
       </div>
       <div class="info">
-        <h3 class="typewriter">Premium Jhey Tompkins</h3>
-        <p class="typewriter">850 demos | 690 CSS</p>
+        <h3>Sultan Aldeiro </h3>
+        <p class="typewriter">University of British Columbia<br>Major in Computer Science<br>Minor in GISC</p>
       </div>
     </article>
   </div>
