--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -8,19 +8,17 @@
   <link rel="stylesheet" href="../../fonts.css">
 </head>
 <body>
-  <h1 class="fluid">the craft of ui</h1>
+  <h1 class="fluid">My Projects</h1>
   <p>
-    Unlock the art and science of interface development. This isn't just about
-    pushing pixels or following documentation — it's about mastering the
-    tools, understanding the nuances, and shaping experiences with intention.
+    List of Projects I have worked on.
   </p>
   <ul>
     <li data-active="true">
       <article>
-        <h3>The Craft</h3>
+        <h3>Re-Bottle</h3>
         <p>
-          Gain the confidence to build anything you envision, transforming
-          motion, interaction, and design principles into second nature.
+          Plastic Waste Management app powered with
+          AWS recognition and ML models to sort waste.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -35,17 +33,16 @@
           <path d="M2 9h20" />
         </svg>
         <a href="#">
-          <span>Watch now</span>
+          <span>Watch Demo</span>
         </a>
         <img src="https://picsum.photos/720/720?random=12" alt="" />
       </article>
     </li>
     <li>
       <article>
-        <h3>CSS Animation</h3>
+        <h3>StyleSwipe</h3>
         <p>
-          Master CSS animations from your very first set of @keyframes right
-          through to things no one else ever teaches you.
+          AI-PoweredTinder like Ebay Marketplace for second hand clothes.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -65,16 +62,15 @@
           <path d="M17 7.5h4" />
           <path d="M17 16.5h4" />
         </svg>
-        <a href="#"><span>Watch now</span></a>
+        <a href="#"><span>Watch Demo</span></a>
         <img src="https://picsum.photos/720/720?random=17" alt="" />
       </article>
     </li>
     <li>
       <article>
-        <h3>SVG Filters</h3>
+        <h3>Styleify</h3>
         <p>
-          Shaders on a budget. Learn how to use noise to your advantage whilst
-          making flames and stickers.
+          Mood based Clothing based on Spotify Playlist.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -87,16 +83,15 @@
         >
           <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3" />
         </svg>
-        <a href="#"><span>Watch now</span></a>
+        <a href="#"><span>Watch Demo</span></a>
         <img src="https://picsum.photos/720/720?random=19" alt="" />
       </article>
     </li>
     <li>
       <article>
-        <h3>Scroll Animation</h3>
+        <h3>PriceFlight</h3>
         <p>
-          Take your users on a journey with the joy of tasteful scroll
-          animation. You might not even need JavaScript.
+          AI-Powered Cheap flight finder based on Google Flight price mistakes.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -112,16 +107,15 @@
             d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3"
           />
         </svg>
-        <a href="#"><span>Watch now</span></a>
+        <a href="#"><span>Watch Demo</span></a>
         <img src="https://picsum.photos/720/720?random=42" alt="" />
       </article>
     </li>
     <li>
       <article>
-        <h3>Taming Canvas</h3>
+        <h3>Legalize</h3>
         <p>
-          Grasp how to tame the pixel playground and when to do so. Whilst
-          building with "Performance Driven Development".
+          AI-Powered legal document summarizer for everyone.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -140,16 +134,15 @@
             d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10c.926 0 1.648-.746 1.648-1.688 0-.437-.18-.835-.437-1.125-.29-.289-.438-.652-.438-1.125a1.64 1.64 0 0 1 1.668-1.668h1.996c3.051 0 5.555-2.503 5.555-5.554C21.965 6.012 17.461 2 12 2z"
           />
         </svg>
-        <a href="#"><span>Watch now</span></a>
+        <a href="#"><span>Watch Demo</span></a>
         <img src="https://picsum.photos/720/720?random=128" alt="" />
       </article>
     </li>
     <li>
       <article>
-        <h3>Layout Tricks</h3>
+        <h3>SafeJourney</h3>
         <p>
-          Do you really need a library for that? Sometimes stepping back and
-          rethinking the problem yields a nifty solution.
+          AI-Powered app for cybersecurity protection in choosen vacation sites.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -177,10 +170,10 @@
     </li>
     <li>
       <article>
-        <h3>Mastering Time</h3>
+        <h3>Netflix or Thrill?</h3>
         <p>
-          It's not all just easings and compositions. Time plays a crucial
-          part in various UI patterns that might not seem obvious at first.
+          ML-based project for Netflix movie recommendation based on User mood
+          based on tarot card reading.
         </p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -200,7 +193,7 @@
             d="M7 2v4.172a2 2 0 0 0 .586 1.414L12 12l4.414-4.414A2 2 0 0 0 17 6.172V2"
           />
         </svg>
-        <a href="#"><span>Watch now</span></a>
+        <a href="#"><span>Watch Demo</span></a>
         <img src="https://picsum.photos/720/720?random=39" alt="" />
       </article>
     </li>
