--- a/pages/cover/cover.html
+++ b/pages/cover/cover.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Pro - Those Little Details</title>
+  <title>Sultan Aldeiro - Portfolio</title>
   <link rel="stylesheet" href="cover.css">
   <link rel="stylesheet" href="../../fonts.css">
 </head>
@@ -13,14 +13,14 @@
       autoplay
       muted
       loop
-      src="https://assets.codepen.io/605876/turntable-opt.mp4"
+      src="./cover.mp4"
     ></video>
     <section>
-      <h1>
-        <span>CSS Pro</span>
-        <span>Those Little Details</span>
-      </h1>
-      <a aria-hidden="true" href="#read">
+      <!-- <h1>
+        <span>Sultan</span>
+        <span>Aldeiro</span>
+      </h1> -->
+      <!-- <a aria-hidden="true" href="#read">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -35,28 +35,25 @@
             d="M19.5 13.5 12 21m0 0-7.5-7.5M12 21V3"
           />
         </svg>
-      </a>
+      </a> -->
     </section>
   </header>
   <section class="reader" id="read">
     <div class="content">
       <div class="sr-only">
-        With CSS, you can do way more than you think. One of the most fun CSS
-        animation APIs ever. A magical way to create scroll-driven animations
-        without the need to touch JavaScript. Animations run off the main
-        thread. And you can choose to use View Timelines or Scroll Timelines.
+        Hi, My name is Sultan Aldeiro and I am a Computer Science Student
+        in UBC Okanagan with interest in Cloud, Cybersecurity, and remote Sensing
       </div>
       <div data-split aria-hidden="true">
-        The little details that make your sites feel great. Combine sticky
-        positioning with some scroll animation. With CSS, you can do way more
-        than you think.
+        I am driven by the rapidly evolving world requiring people to understand
+        the environment around them while actively living alongside AI.
       </div>
     </div>
   </section>
   <section>
-    <h2><span>You</span> got this.</h2>
+    <h2><span>The Future</span> Awaits</h2>
   </section>
-  <footer>jhey &copy; 2024 ʕ – ᴥ – ʔ</footer>
+  <!-- <footer>Hi, My name is Sultan</footer> -->
 
   <script src="cover.js"></script>
   <script>
