--- a/pages/experience/experience.html
+++ b/pages/experience/experience.html
@@ -29,7 +29,7 @@
                     <img src="https://picsum.photos/200/200?random=3" alt="" />
                 </li>
                 <li>
-                    <a href="#">VR Study research assistant<span>Nov 2024 - Apr 2025</span></a>
+                    <a href="#">VR Study <br>research assistant<span>Nov 2024 - Apr 2025</span></a>
                     <img src="https://picsum.photos/200/200?random=4" alt="" />
                 </li>
                 <li>
