--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -3,100 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Pro - Scroll-driven Crossfades</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Story Slider</title>
+  <link rel="stylesheet" href="slider-styles.css">
 </head>
 <body>
-  <header>
-    <h1><span>All-New</span>CSS Pro</h1>
-    <h2 class="typewriter">Scroll-driven crossfades</h2>
-  </header>
-  <main>
-    <section>
-      <div class="image-box">
-        <div class="swapper">
-          <div class="progress">
-            <div><div></div></div>
-            <div><div></div></div>
+  <div id="home-slider">
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="swiper-image" data-swiper-parallax-y="-20%">
+            <div class="swiper-image-inner swiper-image-left">
+              <h1>A <span class="emphasis">Breath</span>. <br><span>Of Fresh Air.</span></h1>
+              <p>Chapter I, page XV</p>
+            </div>
           </div>
-          <div class="caption">
-            <h2>Tiny amounts of CSS</h2>
-            <p class="typewriter">Scroll-driven animations give you the ability to drive your CSS animations on scroll.</p>
+          <div class="swiper-image" data-swiper-parallax-y="35%">
+            <div class="swiper-image-inner swiper-image-right">
+              <p class="paragraph">
+                A Prophet sat in the market-place and told the fortunes of all who cared to engage his services. Suddenly there came running up one who told him that his house had been broken into by thieves, and that they had made off with everything they could lay
+                hands on.
+              </p>
+            </div>
           </div>
-          <img src="https://fastly.picsum.photos/id/331/1080/1080.jpg?hmac=sKtPuOzOG1d8p_sVxG4BEL0XGOMPDCvjpN43H9zqW9M" alt="" width="1080" />
-          <img src="https://fastly.picsum.photos/id/536/1080/1080.jpg?hmac=TfR6GPF3n9B6s9bK4hbWAh_1qU8AGdKEOMiQd_nZIhs" alt="" width="1080" />
         </div>
-        <div class="controller">
-          <img src="https://fastly.picsum.photos/id/1033/1080/1080.jpg?hmac=O43_Fmtq6is3ysXH7ZLNS4iNqCcoWCIEftNR8UK0L5s" alt="" width="1080" />
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="image-box">
-        <div class="controller">
-          <img src="https://fastly.picsum.photos/id/827/1080/1080.jpg?hmac=wB2CZUPy2O2MgG8okJtTZZadwwADt7XpjNRIz9fOeME" alt="" width="1080" />
-        </div>
-        <div class="swapper">
-          <div class="progress">
-            <div><div></div></div>
-            <div><div></div></div>
+        <div class="swiper-slide">
+          <div class="swiper-image" data-swiper-parallax-y="-20%">
+            <div class="swiper-image-inner swiper-image-left">
+              <h1>The <span class="emphasis">Drop</span>. <br><span>Of Eternal life.</span></h1>
+              <p>Chapter II, page VII</p>
+            </div>
           </div>
-          <div class="caption">
-            <h2>Cross fading</h2>
-            <p class="typewriter">The trick is one animation to take opacity from 1 to 0. One image uses reverse animation-direction.</p>
+          <div class="swiper-image" data-swiper-parallax-y="35%">
+            <div class="swiper-image-inner swiper-image-right">
+              <p class="paragraph">
+                A thirsty Crow found a Pitcher with some water in it, but so little was there that, try as she might, she could not reach it with her beak, and it seemed as though she would die of thirst within sight of the remedy.
+              </p>
+            </div>
           </div>
-          <img src="https://fastly.picsum.photos/id/378/1080/1080.jpg?hmac=U_xpCJPibwUl5MELHA1W48oscgI19Tsu_zCsFSBen5g" alt="" width="1080" />
-          <img src="https://fastly.picsum.photos/id/781/1080/1080.jpg?hmac=jkgggUr9sBP4qCFAKygIg2lgkcwlZXzll0rwptlFHH4" alt="" width="1080" />
         </div>
-      </div>
-    </section>
-    <section>
-      <div class="image-box">
-        <div class="swapper">
-          <div class="progress">
-            <div><div></div></div>
-            <div><div></div></div>
+        <div class="swiper-slide">
+          <div class="swiper-image" data-swiper-parallax-y="-20%">
+            <div class="swiper-image-inner swiper-image-left">
+              <h1>A <span class="emphasis">Sense</span>. <br><span>Of Things to Come.</span></h1>
+              <p>Chapter III, page XI</p>
+            </div>
           </div>
-          <div class="caption">
-            <h2>mix-blend-mode</h2>
-            <p class="typewriter">For a better looking fade, use mix-blend-mode: plus-lighter on the images.</p>
+          <div class="swiper-image" data-swiper-parallax-y="35%">
+            <div class="swiper-image-inner swiper-image-right">
+              <p class="paragraph">
+                Every man carries Two Bags about with him, one in front and one behind, and both are packed full of faults. The Bag in front contains his neighbours' faults, the one behind his own. Hence it is that men do not see their own faults, but never fail to see
+                those of others.
+              </p>
+            </div>
           </div>
-          <img src="https://fastly.picsum.photos/id/117/1080/1080.jpg?hmac=-9Jpnmxo4_zX7bESbfC1x4y5bAxow3Cvhejo-gZsCIE" alt="" width="1080" />
-          <img src="https://fastly.picsum.photos/id/659/1080/1080.jpg?hmac=_To6fpzA0QnMsx3PTeTwtVxjjbnnNN2rliHf9q0UDNU" alt="" width="1080" />
-        </div>
-        <div class="controller">
-          <img src="https://fastly.picsum.photos/id/358/1080/1080.jpg?hmac=MbMwFskGUIBLvCw3ww1djE0ZnUN3iRw1a9tR_VCSURM" alt="" width="1080" />
         </div>
       </div>
-    </section>
-    <section>
-      <div class="image-box">
-        <div class="controller">
-          <img src="https://fastly.picsum.photos/id/362/1080/1080.jpg?hmac=vzwn2CXU8s21DH7LVZRAozOwmkP5S2iWl2ssJvCv2QA" alt="" width="1080" />
-        </div>
-        <div class="swapper">
-          <div class="progress">
-            <div><div></div></div>
-            <div><div></div></div>
-          </div>
-          <div class="caption">
-            <h2>Driver</h2>
-            <p class="typewriter">Drive the animation based on the container position. Use calc for other effects.</p>
-          </div>
-          <img src="https://fastly.picsum.photos/id/983/1080/1080.jpg?hmac=_pzYklUuqWk6z0X9h9p9xNKJr2sThQoadn5YRCVHa88" alt="" width="1080" />
-          <img src="https://fastly.picsum.photos/id/825/1080/1080.jpg?hmac=XUiCHv4mdtexe6QpAmD4Y_d81clCeLoZKYO6xGtRU6M" alt="" width="1080" />
-        </div>
-      </div>
-    </section>
-    <section>
-      <h2>fin.</h2>
-      <h2 class="typewriter">Bookmark and follow for more.<br>Polyfilled with GSAP.</h2>
-    </section>
-  </main>
-  <footer class="typewriter">jh3yy &copy; 2024 ʕ •ᴥ•ʔ</footer>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
 
-  <script src="https://cdn.skypack.dev/gsap@3.12.0"></script>
-  <script src="https://cdn.skypack.dev/gsap@3.12.0/ScrollTrigger"></script>
-  <script src="main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
+  <script src="slider-script.js"></script>
 </body>
 </html>
